--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -104,3 +104,17 @@
   background-color: #FFFFFF
   border-top-right-radius: 20px
   border-bottom-right-radius: 20px
+
+.fa-ul2
+  margin-left: 0 !important
+  li
+    display: flex !important
+    &::before
+      position: relative
+      margin-right: 7px
+      font-size: 1.4rem
+
+    &:before
+      position: relative
+      margin-right: 7PX
+      font-size: 1.4rem
