--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -1,3 +1,15 @@
+.banner-principal__row .banner-principal__img
+  width: 450px
+  animation: float1 3.5s ease-in-out infinite alternate
+  position: relative
+
+@keyframes float1
+  0%
+    transform: translateY(20px)
+
+  100%
+    transform: translateY(0px)
+  
 .cajon.color-primario
   background-color: #EAE5FB
 
@@ -55,8 +67,6 @@
   background-repeat: no-repeat
   background-size: cover
   background-position: center
-  padding-top: 100px
-  padding-bottom: 100px
 
 .bg-color3
   background-image: url(../assets/curso/img3.svg)
