--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -128,3 +128,20 @@
       position: relative
       margin-right: 7PX
       font-size: 1.4rem
+    
+.BGR01
+  background-color: #E6F7FE
+  border-radius: 30px 30px 0 30px
+
+.BG02
+  background-color: #12263F
+  border-radius: 5px
+
+.BG03
+  background-color: #FFF
+
+.BG04
+  background-color: #E8E8E8
+
+.BG05
+  background-color: #DEE4F0
